<resources>
    <string name="app_name">NeWork</string>
    <string name="logout">Logout</string>
    <string name="profil">Profil</string>
    <string name="aut">Aut</string>
    <string name="register">Register</string>
    <string name="retry">Retry</string>
    <string name="network_error">Network error</string>
    <string name="share">share</string>
    <string name="avatar">avatar</string>
    <string name="likes">likes</string>
    <string name="likers">Likers</string>
    <string name="likers_more">Likers more</string>
    <string name="mentioned">Mentioned</string>
    <string name="likers_list">Likers list</string>
    <string name="remove">Remove</string>
    <string name="new_event">New event</string>
    <string name="new_post">New post</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="event">Event</string>
    <string name="post">Post</string>
    <string name="speakers_list">Speakers list</string>
    <string name="participants_list">Participants list</string>
    <string name="participants_title">Participants Title</string>
    <string name="participants">Participants</string>
    <string name="speakers">Speakers</string>
    <string name="attachment">Attachment</string>
    <string name="empty">Empty</string>
    <string name="menu">menu</string>
    <string name="imageAttachment">imageAttachment</string>
    <string name="videoAttachment">videoAttachment</string>
    <string name="mentionedTitle">Mentioned</string>
    <string name="mentioned_list">Mentioned List</string>
    <string name="wall">Wall</string>
    <string name="jobs">Jobs</string>
    <string name="endData">1 августа 2020</string>
    <string name="startDate">1 марта 2019</string>
    <string name="job_position">Job position</string>
    <string name="job_link">https://m2.material.io/components/cards</string>
    <string name="you">You</string>
    <string name="add_job">add job</string>
    <string name="name_job">Name</string>
    <string name="position_job">Position</string>
    <string name="link_job">Link</string>
    <string name="create">Create</string>
    <string name="start_data">27.09.2023</string>
    <string name="select_date_title">Select date</string>
    <string name="enter_dates_title">Enter dates</string>
    <string name="enter_dates_icon">Enter dates</string>
    <string name="date">Date</string>
    <string name="end_date">End date</string>
    <string name="date_format">mm/dd/yyyy</string>
    <string name="cancel_title_btn">Cancel</string>
    <string name="ok_title_btn">OK</string>
    <string name="login">Login</string>
    <string name="password_helper_text">Password cannot be empty</string>
    <string name="login_btn">Login</string>
    <string name="password_hint">Password</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="registration">Registration</string>
    <string name="name_hint">Name</string>
    <string name="photo_camera">Photo camera</string>
    <string name="add_post">add post</string>
    <string name="confirm_password">Confirm password</string>
    <string name="dash">dash</string>
    <string name="delete_job">delete job</string>
    <string name="title_job_name">Job name</string>
    <string name="icon_play">icon_play</string>
    <string name="title_likes">likes</string>
    <string name="title_share">share</string>
    <string name="my_profile_image">my profile image</string>
    <string name="image_attachment">image attachment</string>
    <string name="mentioned_more">mentioned more</string>
    <string name="attach_file">Attach file</string>
    <string name="photo">photo</string>
    <string name="type">Type</string>
    <string name="play_event">Play Event</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="share_post">Share post</string>
    <string name="login_or_password_is_empty">Login or password is empty</string>
    <string name="content_can_t_be_empty">Content can\\\'t be empty</string>
    <string name="login_or_name_or_password_is_empty">Login or name or password is empty</string>
    <string name="fab_click_message">To add you need to register or log in</string>
    <string name="passwords_do_not_match">The entered passwords do not match</string>
    <string name="postimageattachment">postImageAttachment</string>
    <string name="this_event_location">This event location</string>
    <string name="hello_blank_fragment">Blank fragment</string>
    <string name="picking_photo_error">Picking photo error</string>
    <string name="save">Save</string>
    <string name="text_editing_field">Text editing field</string>
    <string name="choose_where_open_your_video">Choose_where_open_your_video</string>
    <string name="choose_where_open_your_audio">Choose where open your audio</string>
    <string name="new_job">New job</string>
    <string name="users_not_loaded_try_again">Users not loaded. Try again</string>
    <string name="try_loading_users">Try loading users</string>
    <string name="share_event">share event</string>
    <string name="eventimageattachment">eventImageAttachment</string>
    <string name="add_date">add date</string>
    <string name="event_date">Event date</string>
    <string name="dd_mm_yyyy_hh_mm">dd.mm.yyyy HH:mm</string>
    <string name="date_type">Date type</string>
    <string name="body_is_null">Body is null!</string>
    <string name="savechooseusers">SaveChooseUsers</string>
    <string name="registration_error">Registration error</string>
    <string name="my_profile_photo">My profile photo</string>
    <string name="download_error_try_again">Download error. Try again</string>
    <string name="end_icon" translatable="false">end icon</string>
    <string name="to_add_job_you_need_to_register_or_login">To add  job, you need to register or login</string>
    <string name="pass_do_not_match">The entered passwords do not match</string>
    <string name="users_photo">Users photo</string>
    <string name="incorrect_username_or_password">Incorrect username or password</string>
    <string name="user_is_not_registered">The user is not registered</string>
    <string name="user_is_already_registered">User is already registered</string>
    <string name="incorrect_photo_format">Incorrect photo format</string>
    <string name="unknown_error">Unknown error</string>
    <string name="attach_must_not_exceed_15_mb">The attachment must not exceed 15 MB</string>
    <string name="edit_text">edit text</string>
    <string name="add_photo">Add photo</string>
    <string name="load_file">Load file</string>
    <string name="mentioned_users">mentioned users</string>
    <string name="add_location">add location</string>
    <string name="check">Check</string>
</resources>