<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/gap_4"
    app:cardCornerRadius="12dp"
    app:strokeColor="@color/borders_card_post"
    app:strokeWidth="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_of_the_post"
        android:padding="@dimen/margin_16">

        <TextView
            android:id="@+id/jobName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_job_name"
            android:textColor="@color/color_header"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing_10"
            android:text="@string/startDate"
            android:textColor="@color/color_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/jobName" />

        <ImageView
            android:id="@+id/dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dash"
            android:contentDescription="@string/dash"
            app:layout_constraintBottom_toBottomOf="@id/startDate"
            app:layout_constraintStart_toEndOf="@id/startDate"
            app:layout_constraintTop_toTopOf="@id/startDate" />

        <TextView
            android:id="@+id/endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endData"
            android:textColor="@color/color_header"
            app:layout_constraintBottom_toBottomOf="@id/startDate"
            app:layout_constraintStart_toEndOf="@id/dash" />

        <ImageView
            android:id="@+id/deleteJob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete_forever"
            android:visibility="gone"
            android:contentDescription="@string/delete_job"
            app:layout_constraintBottom_toBottomOf="@id/startDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/startDate"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/jobPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/job_position"
            android:textColor="@color/color_header"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startDate" />


        <TextView
            android:id="@+id/jobLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/job_link"
            android:textColor="@color/violet"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/jobPosition"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>