<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbarPost"
        layout="@layout/toolbar_new_post" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/postBottomAppBar"
        app:layout_constraintTop_toBottomOf="@id/toolbarPost">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:background="@android:color/transparent"
                android:gravity="start|top"
                android:hint="@string/edit_text"
                android:inputType="textMultiLine"
                tools:text="@tools:sample/lorem[40]" />

            <FrameLayout
                android:id="@+id/postPhotoContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/photoAttachment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/photo"
                    tools:srcCompat="@tools:sample/avatars[8]" />

                <Button
                    android:id="@+id/postRemovePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="25dp"
                    android:text="@string/remove"
                    android:textAllCaps="false"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.NeWork.Button.50" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/mapContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible">

                <com.yandex.mapkit.mapview.MapView
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="250dp" />

                <Button
                    android:id="@+id/removeLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="25dp"
                    android:text="@string/remove"
                    android:textAllCaps="false"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.NeWork.Button.50" />

            </FrameLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/postBottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_gravity="bottom"
        android:background="@color/color_bottom_nav"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/addPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_16"
            android:contentDescription="@string/add_photo"
            app:srcCompat="@drawable/ic_photo_camera" />

        <ImageView
            android:id="@+id/loadFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/load_file"
            android:padding="@dimen/margin_16"
            app:srcCompat="@drawable/ic_attach_file" />

        <ImageView
            android:id="@+id/peopleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_16"
            android:contentDescription="@string/mentioned_users"
            app:srcCompat="@drawable/ic_people" />

        <ImageView
            android:id="@+id/addLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:contentDescription="@string/add_location"
            app:srcCompat="@drawable/ic_location_pin" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>