<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:backgroundTint="@color/background_field_new_job"
    android:visibility="gone"
    app:cardCornerRadius="28dp"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_24"
        android:paddingTop="@dimen/margin_16"
        android:paddingEnd="@dimen/margin_24">

        <TextView
            android:id="@+id/selectDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date_title"
            android:textColor="@color/content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enterDates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:paddingBottom="@dimen/margin_16"
            android:text="@string/enter_dates_title"
            android:textColor="@color/color_header"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectDateTitle" />

        <ImageView
            android:id="@+id/datesIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/enter_dates_icon"
            android:paddingBottom="@dimen/margin_16"
            app:layout_constraintBottom_toBottomOf="@id/enterDates"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/enterDates"
            app:srcCompat="@drawable/ic_event" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/selectDatesBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="enterDates, datesIcon"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/dateFormsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/selectDatesBarrier">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/selectStartDate"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                app:layout_constraintTop_toBottomOf="@id/selectDatesBarrier"
                app:placeholderText="@string/date_format">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/selectEndDate"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:hint="@string/end_date"
                app:layout_constraintBottom_toBottomOf="@id/selectStartDate"
                app:layout_constraintStart_toEndOf="@id/selectStartDate"
                app:placeholderText="@string/date_format">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_24"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateFormsLayout">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="end"
                android:padding="0dp"
                android:text="@string/cancel_title_btn"
                android:textAllCaps="false"
                android:textColor="@color/violet" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/okBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="end"
                android:padding="0dp"
                android:text="@string/ok_title_btn"
                android:textColor="@color/violet" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>