<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbarMyPhoto"
        layout="@layout/toolbar_profil_my_foto" />

    <FrameLayout
        android:layout_width="150dp"
        android:layout_height="250dp"
        android:background="@color/background_of_the_post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="profil photo"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/registerProfilePhoto"
            android:layout_width="match_parent"
            android:contentDescription="@string/photo"
            android:layout_height="250dp" />

        <Button
            android:id="@+id/clearPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/remove"
            android:textAllCaps="false"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.NeWork.Button.50" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/registerBottomBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/color_bottom_nav"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/cameraAddPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_16"
            android:contentDescription="@string/photo_camera"
            app:srcCompat="@drawable/ic_photo_camera" />

        <ImageView
            android:id="@+id/galeryLoadPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_16"
            android:contentDescription="@string/load_file"
            app:srcCompat="@drawable/ic_attach_file" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>